[project]
name = "resort-tracker"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "uvicorn",
  "sqlmodel",
]

[tool.pytest.ini_options]
pythonpath = ["."]
filterwarnings = [
  "ignore:Accessing argon2.__version__:DeprecationWarning"]

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "I"]
exclude = ["venv", "migrations", "__pycache__"]

